--- a/packages/dnb-eufemia/package.json
+++ b/packages/dnb-eufemia/package.json
@@ -19,21 +19,21 @@
     "audit:ci:npm": "audit-ci --config ./audit-ci.json --report-type summary",
     "audit:ci:yarn": "audit-ci --config ./audit-ci.json --package-manager=yarn --report-type summary",
     "audit:ci:yarn-outdated": "babel-node ./scripts/prepub/audit/toOpt && audit-ci --config ./audit-ci.json --package-manager=yarn --report-type full && babel-node ./scripts/prepub/audit/toDev",
-    "build": "yarn build:clean && yarn build:prebuild && yarn build:esm && yarn build:copy",
+    "build": "yarn build:clean && yarn build:prebuild && yarn build:es && yarn build:copy",
     "prebuild:ci": "yarn build",
-    "postbuild:ci": "yarn build:types && yarn build:cjs && yarn build:es && yarn build:umd && yarn build:esm && yarn build:copy && yarn prettier:other && echo \"Can be enabled in future -> yarn build:resources\"",
+    "postbuild:ci": "yarn build:types && yarn build:es && yarn build:esm && yarn build:cjs && yarn build:umd && yarn build:copy && yarn prettier:other && echo \"Can be enabled in future -> yarn build:resources\"",
     "prebuild:ci:figma": "yarn figma",
     "postbuild:ci:figma": "yarn test:update && yarn test:screenshots icon -u && babel-node ./scripts/figma/tasks/commitChanges",
     "build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs babel ./src --extensions .cjs,.js --keep-file-extension --config-file ./babel.config.js --out-dir ./build/cjs --copy-files --no-copy-ignored --ignore 'src/esm,src/umd,src/core,**/*.test.js,**/__tests__/**/*'",
     "build:clean": "rm -rf build/**",
-    "build:component": "cross-env NODE_ENV=production BABEL_ENV=esm babel ./src/components/global-status --extensions .js --config-file ./babel.config.js --out-dir ./build/esm/components/global-status",
+    "build:component": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src/components/global-status --extensions .js --config-file ./babel.config.js --out-dir ./build/es/components/global-status",
     "build:copy": "./scripts/release/copy-build-artifacts.sh",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src --extensions .js --config-file ./babel.config.js --out-dir ./build/es --copy-files --no-copy-ignored --ignore 'src/cjs,src/esm,src/umd,src/core,**/*.test.js,**/__tests__/**/*'",
-    "build:esm": "cross-env NODE_ENV=production BABEL_ENV=esm babel ./src --extensions .js --config-file ./babel.config.js --out-dir ./build/esm --copy-files --no-copy-ignored --ignore 'src/cjs,src/esm,src/umd,src/core,**/*.test.js,**/__tests__/**/*'",
+    "build:esm": "cross-env NODE_ENV=production BABEL_ENV=esm babel ./src --extensions .js --config-file ./babel.config.js --out-dir ./build/es --copy-files --no-copy-ignored --ignore 'src/cjs,src/esm,src/umd,src/core,**/*.test.js,**/__tests__/**/*'",
     "build:pack": "yarn build && yarn publish:prepare && cd ./build && yarn pack",
     "build:prebuild": "babel-node ./scripts/prepub/runPrepub.js",
     "build:resources": "babel-node ./scripts/prepub/resources/makeResourcesPackage.js",
-    "build:shared": "cross-env NODE_ENV=production BABEL_ENV=esm babel ./src/shared --extensions .js --config-file ./babel.config.js --out-dir ./build/esm/shared --ignore '**/__tests__/**/*'",
+    "build:shared": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src/shared --extensions .js --config-file ./babel.config.js --out-dir ./build/es/shared --ignore '**/__tests__/**/*'",
     "build:types": "babel-node ./scripts/prepub/generateTypes.js",
     "build:types:dev": "nodemon --exec 'babel-node ./scripts/prepub/generateTypes.js' --ext js --watch './src/**/*' --watch './scripts/**/*'",
     "build:umd": "cross-env NODE_ENV=production BABEL_ENV=umd rollup -c ./rollup.config.js",
