feat: use modal drawer finstead of DatePicker inline

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,8 @@ on:
       - '**'
       - '!**--skip-ci'
       - '!**--visual-reports'
-      - 'experiments/**'
+      - '!wip/**'
+      - '!experiments/**'
 
 jobs:
   action:
