--- a/packages/dnb-design-system-portal/package.json
+++ b/packages/dnb-design-system-portal/package.json
@@ -65,6 +65,7 @@
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
     "@netlify/plugin-gatsby": "1.0.3",
+    "@swc/core": "1.2.106",
     "babel-jest": "27.2.4",
     "babel-preset-gatsby": "2.0.0",
     "camelcase": "6.2.0",
@@ -78,6 +79,7 @@
     "dotenv": "10.0.0",
     "enzyme": "3.11.0",
     "enzyme-to-json": "3.6.2",
+    "esbuild-loader": "2.16.0",
     "eslint": "7.32.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
@@ -134,6 +136,7 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "svg-react-loader": "0.4.6",
+    "swc-loader": "0.1.15",
     "yarn-plugin-ignore-install-options": "1.0.2"
   },
   "installConfig": {
